@@ -22,7 +22,9 @@ public class ChuuVirtualPool {
 
 
     public static ExecutorService of(String poolName) {
-        return Executors.newFixedThreadPool(2);
+        return Executors.newThreadPerTaskExecutor(Thread.ofVirtual().uncaughtExceptionHandler((t, e) -> log.warn(e.getMessage(), e))
+                .inheritInheritableThreadLocals(false)
+                .name(poolName + "-Virtual-", 0).factory());
     }
 
 
